# STM32ProjectTemplate

./: .gdbinit  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md
app/: init_app.c
app/drivers/: init_drivers.c
app/drivers/chip_internal/os/src/: init_chip_internal.c
app/drivers/onboard_devices/os/src/: init_onboard_devices.c
app/tasks/src/: init_tasks.c
cmake/: FindCMSIS.cmake  FindJunglesOsStructs.cmake  FindSTM32HAL.cmake  FindSTM32LL.cmake  FindTinyprintf.cmake  FindUnity.cmake  gcc_stm32l4.cmake
ext_deps/: init_ext_deps.c
scripts/: build.sh  build_prepare.sh  build_prepare_unit_local_tests.sh  build_unit_local_tests.sh  clean.sh  clean_unit_local_tests.sh  repo_prepare.sh  run_unit_local_tests.sh
