CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(Template)
ENABLE_LANGUAGE(ASM)

SET(ROOT_DIR "${CMAKE_SOURCE_DIR}")

# Generate compilation database
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Set cmake module path to reach cmake directory
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${ROOT_DIR}/cmake")

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -gdwarf-4 -g3")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -gdwarf-4 -g3")
ENDIF()

# Put the binary file into bin directory
SET(EXECUTABLE_OUTPUT_PATH "${ROOT_DIR}/bin")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})

SET(DATA_STRUCTS ${ROOT_DIR}/app/data_structs)
SET(OS_STRUCTS ${ROOT_DIR}/app/os_structs)
SET(CHAR_DRIVERS ${ROOT_DIR}/app/drivers/char_drivers)
SET(CHIP_INTERNAL_DRIVERS ${ROOT_DIR}/app/drivers/char_drivers)
SET(ONBOARD_DEVICES_DRIVERS ${ROOT_DIR}/app/driver/onboard_devices)
SET(INTERNAL_OS_API ${ROOT_DIR}/app/internal_api/os)
SET(INTERNAL_NON_OS_API ${ROOT_DIR}/app/internal_api/non-os)
SET(TASKS ${ROOT_DIR}/app/tasks)
SET(DRIVER_TESTS ${ROOT_DIR}/tests/drivers)
SET(CHIP_INTERNAL_MOCKS ${ROOT_DIR}/tests/mocks/chip_internal)
SET(ONBOARD_DEVICES_MOCKS ${ROOT_DIR}/tests/mocks/onboard_devices)
SET(UNIT_LOCAL_TESTS ${ROOT_DIR}/tests/unit_local)
SET(UNIT_LOCAL_RTOS_TESTS ${ROOT_DIR}/tests/unit_rtos_local)
SET(GENERATED_CODE ${ROOT_DIR}/generated)
SET(THIRD_PARTY ${ROOT_DIR}/third_party)

IF(UNIT_TEST_LOCAL OR UNIT_TEST_RTOS_LOCAL OR UNIT_TEST_DRIVERS)
    FIND_PACKAGE(Unity REQUIRED)
    INCLUDE_DIRECTORIES(${Unity_INCLUDE_DIRS})
    ADD_EXECUTABLE(${PRJ_NAME} ${Unity_SOURCES})
ENDIF()

IF(UNIT_TEST_LOCAL)
	SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME "${CMAKE_PROJECT_NAME}-local_test")
ELSEIF(UNIT_TEST_RTOS_LOCAL)

	SET(FreeRTOS_PORT Linux)
	SET(FreeRTOS_HEAP_IMPL 3)
	FIND_PACKAGE(FreeRTOS REQUIRED)

	TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} Threads::Threads)
	SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME "${CMAKE_PROJECT_NAME}-rtos_local_test")

ELSE()
	ADD_DEFINITIONS(-DCROSS_COMPILING)

	# Set variables used by ObKo-stm32cmake 
	SET(STM32_LINKER_SCRIPT	"${ROOT_DIR}/STM32L432KCUx_FLASH.ld")

	FIND_PACKAGE(CMSIS REQUIRED)
	
	SET(FreeRTOS_PORT ARM_CM4F)
	SET(FreeRTOS_HEAP_IMPL 4)
	FIND_PACKAGE(FreeRTOS COMPONENTS CMSIS REQUIRED)

	FIND_PACKAGE(STM32LL COMPONENTS gpio REQUIRED)
	FIND_PACKAGE(STM32HAL COMPONENTS tim REQUIRED)

	TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME})

	STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
	STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
ENDIF()

# Add "tags" target and make the project depending on this target.
SET_SOURCE_FILES_PROPERTIES(tags PROPERTIES GENERATED true)
ADD_CUSTOM_TARGET(tags
    COMMAND ctags -R --c++-kinds=+p --fields=+iaS --extra=+q .
    WORKING_DIRECTORY ${ROOT_DIR})
ADD_DEPENDENCIES(${CMAKE_PROJECT_NAME} tags)
